--- a/src/main/resources/templates/secret.html
+++ b/src/main/resources/templates/secret.html
@@ -12,7 +12,43 @@
 
 <p>Welcome to the Secret Page! Only Admins Can See This</p>
 
+<p>User List</p>
+
+<ul id="myUL">
+
+
+
+</ul>
+
+
 <div th:replace="fragments/footer :: footer"/>
+
+<script>
+    getAllUsers();
+
+    function getAllUsers() {
+
+        var getUsersRequest = new XMLHttpRequest();
+        getUsersRequest.onreadystatechange = () => {
+            if (getUsersRequest.readyState == 4 && getUsersRequest.status == 200){
+
+                let ul = document.getElementById("myUL");
+                let list = "";
+                let users = JSON.parse(getUsersRequest.response);
+
+                users.forEach(function (user) {
+                    list += "<li>"+user.username+"</li>";
+                })
+
+                ul.innerHTML = list;
+            }
+        }
+        getUsersRequest.open("GET","http://localhost:8080/users", true);
+        getUsersRequest.setRequestHeader("Content-Type", "application/json");
+        getUsersRequest.send();
+    }
+
+</script>
 
 </body>
 
