--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -10,13 +10,13 @@
 
 <body>
 
-<a href="/secured">See the Secret</a>
+<a href="/secured">See All Users</a>
 
-<!--<form>-->
-<!--    <input type="text" placeholder="Username">-->
-<!--    <input type="password" placeholder="Password">-->
-<!--    <input type="submit">-->
-<!--</form>-->
+<p>
+    <input type="text" placeholder="Username" id="username">
+    <input type="password" placeholder="Password" id="password">
+    <button id="signButton">Sign in</button>
+</p>
 
 <div th:if="${param.logout}">
     <div class="alert alert-info">
@@ -26,6 +26,32 @@
 
 <div th:replace="fragments/footer :: footer"/>
 
+<script>
+
+    document.getElementById("signButton").addEventListener("click",()=> {
+
+        let username = document.getElementById("username").value;
+        let password = document.getElementById("password").value;
+
+        let user = {
+            "username" : username,
+            "password" : password
+        }
+
+        var saveUserRequest = new XMLHttpRequest();
+        saveUserRequest.onreadystatechange = () => {
+            // console.log(saveUserRequest.response);
+            if (saveUserRequest.readyState == 4 && saveUserRequest.status == 200){
+                console.log(saveUserRequest.response);
+            }
+        }
+        saveUserRequest.open("POST","http://localhost:8080/users", true);
+        saveUserRequest.setRequestHeader("Content-Type", "application/json");
+        saveUserRequest.send(JSON.stringify(user));
+
+    })
+
+</script>
 
 </body>
 
