--- a/src/main/resources/templates/secret.html
+++ b/src/main/resources/templates/secret.html
@@ -6,22 +6,27 @@
 
     <title>Secret Page</title>
 
+    <div th:replace="fragments/myCSS :: defaultCSS"></div>
+
 </head>
 
 <body>
+    <div class="wrapper">
+        <h1 id="homepageHeader">ADMIN PAGE</h1>
 
-<p>Welcome to the Secret Page! Only Admins Can See This</p>
+        <p>Welcome to the Secret Page! Only Admins Can See This</p>
 
-<p>User List</p>
+        <p>User List</p>
 
-<ul id="myUL">
+        <ul id="myUL">
 
+        </ul>
 
+        <p><a href="/">Homepage</a></p>
 
-</ul>
+        <div th:replace="fragments/footer :: footer"/>
 
-
-<div th:replace="fragments/footer :: footer"/>
+    </div>
 
 <script>
     getAllUsers();
