Giving Infos to User while Signing in(Failed,Success,Fields Cannot Be Empty)

--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -13,11 +13,16 @@
 
 <body>
 
+
+<div class="wrapper">
+
     <p>You are Not Authorized to see this page</p>
 
     <p><a href="/">Turn Back to HomePage</a></p>
 
     <div th:replace="fragments/footer :: footer"/>
+
+</div>
 
 </body>
 
