--- a/src/main/resources/templates/fragments/myCSS.html
+++ b/src/main/resources/templates/fragments/myCSS.html
@@ -26,6 +26,31 @@
                 margin: 0 auto;
             }
 
+            #signinSuccessDiv {
+
+                padding: 10px;
+                background-color: lightgreen;
+                width: 200px;
+                text-align: center;
+                display: none;
+            }
+
+            #signinFailDiv {
+                padding: 10px;
+                background-color: indianred;
+                width: 200px;
+                text-align: center;
+                display: none;
+            }
+
+            #emptyValues {
+                padding: 10px;
+                background-color: palegoldenrod;
+                width: 200px;
+                text-align: center;
+                display: none;
+            }
+
         </style>
     </div>
 
