Designed Log Out Info Box

--- a/src/main/resources/templates/fragments/myCSS.html
+++ b/src/main/resources/templates/fragments/myCSS.html
@@ -51,6 +51,13 @@
                 display: none;
             }
 
+            #logoutAlertDiv {
+                padding: 10px;
+                background-color: lightyellow;
+                width: 200px;
+                text-align: center;
+            }
+
         </style>
     </div>
 
