Admin now cannot delete admins

--- a/src/main/resources/templates/secret.html
+++ b/src/main/resources/templates/secret.html
@@ -41,9 +41,17 @@
                 let list = "";
                 let users = JSON.parse(getUsersRequest.response);
                 let deleteUser = "deleteUser";
-                users.forEach(function (user) {
+                users.forEach(function (user) { console.log(user.roleSet);
                     let deletingUsername = user.username;
-                    list += "<li>"+user.username+"</li> <button onclick=deleteUser('"+deletingUsername+"')>x</button>";
+                    list += "<li>"+user.username+"</li>";
+
+                    if(user.roleSet[0]==null){
+                        list += "<button onclick=deleteUser('"+deletingUsername+"')>x</button>";
+                    } else if(user.roleSet[0].role=="ADMIN") {
+                        list += "(ADMIN)";
+                    } else {
+                        list += "<button onclick=deleteUser('"+deletingUsername+"')>x</button>";
+                    }
                 })
                 ul.innerHTML = list;
             }
