Added RoleService and RoleController and SQL Query for initialization

--- a/src/main/resources/templates/secret.html
+++ b/src/main/resources/templates/secret.html
@@ -36,7 +36,6 @@
         var getUsersRequest = new XMLHttpRequest();
         getUsersRequest.onreadystatechange = () => {
             if (getUsersRequest.readyState == 4 && getUsersRequest.status == 200){
-
                 let ul = document.getElementById("myUL");
                 let list = "";
                 let users = JSON.parse(getUsersRequest.response);
@@ -45,12 +44,19 @@
                     let deletingUsername = user.username;
                     list += "<li>"+user.username+"</li>";
 
-                    if(user.roleSet[0]==null){
-                        list += "<button onclick=deleteUser('"+deletingUsername+"')>x</button>";
-                    } else if(user.roleSet[0].role=="ADMIN") {
-                        list += "(ADMIN)";
+                    if (user.roleSet[0] == null) {
+                        list += "<button onclick=deleteUser('" + deletingUsername + "')>x</button>";
                     } else {
-                        list += "<button onclick=deleteUser('"+deletingUsername+"')>x</button>";
+                        let temp = 0;
+                        for (let i = 0; i < user.roleSet.length; i++) {
+                            if (user.roleSet[i].role == "ADMIN") {
+                                list += "(ADMIN)";
+                                temp = 1;
+                            }
+                        }
+                        if (temp === 0) {
+                            list += "<button onclick=deleteUser('" + deletingUsername + "')>x</button>";
+                        }
                     }
                 })
                 ul.innerHTML = list;
