Added Profile Page

--- a/src/main/resources/templates/fragments/myCSS.html
+++ b/src/main/resources/templates/fragments/myCSS.html
@@ -26,6 +26,12 @@
                 margin: 0 auto;
             }
 
+            .profilePageWrapper {
+                width: 400px;
+                height: 200px;
+                margin: 0 auto;
+            }
+
             #signinSuccessDiv {
 
                 padding: 10px;
