More CSS for Home and Prfile Pages

--- a/src/main/resources/templates/fragments/myCSS.html
+++ b/src/main/resources/templates/fragments/myCSS.html
@@ -24,6 +24,7 @@
                 width: 400px;
                 height: 600px;
                 margin: 0 auto;
+                text-align: center;
             }
 
             .profilePageWrapper {
@@ -62,6 +63,20 @@
                 background-color: lightyellow;
                 width: 200px;
                 text-align: center;
+            }
+
+            #signinMainDiv {
+                border: aliceblue 1px solid;
+                background-color: aliceblue;
+                text-align: center;
+            }
+
+            #signinP {
+                text-align: center;
+            }
+
+            #myUL {
+                text-align: initial;
             }
 
         </style>
