--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -17,21 +17,24 @@
 
     <h1 id="homepageHeader">HOMEPAGE</h1>
 
-    <p><a href="/profile">My Profile</a></p>
+    <div th:if="${#httpServletRequest.remoteUser}">
+        <p><a href="/profile">My Profile</a></p>
 
-    <p><a href="/secured">See All Users</a></p>
-
+        <p><a href="/secured">See All Users</a></p>
+    </div>
     <p>
-
-        <div id="signinSuccessDiv">Signed in Successfully</div>
-        <div id="signinFailDiv">Signed in Failed! Please Try Again</div>
-        <div id="emptyValues">Username or Password Cannot Be Empty</div>
         <div th:unless="${#httpServletRequest.remoteUser}">
-            <p><input type="text" placeholder="Username" id="username"></p>
-            <p><input type="password" placeholder="Password" id="password"></p>
-            <p><button id="signButton">Sign in</button></p>
+            <div id="signinMainDiv">
+                <p id="signinP">Sign in</p>
+                <div id="signinSuccessDiv">Signed in Successfully</div>
+                <div id="signinFailDiv">Signed in Failed! Please Try Again</div>
+                <div id="emptyValues">Username or Password Cannot Be Empty</div>
+                <p><input type="text" placeholder="Username" id="username"></p>
+                <p><input type="password" placeholder="Password" id="password"></p>
+                <p><button id="signButton">Sign in</button></p>
+            </div>
         </div>
-</p>
+    </p>
 
     <div th:if="${param.logout}">
         <div id="logoutAlertDiv">
