--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -13,7 +13,7 @@
 
 <body>
 
-<div class="profilePageWrapper">
+<div class="wrapper">
 
     <div>Username : <span id="usernameSpan" th:text="${#httpServletRequest.remoteUser}"></span></div>
     <div>Roles : <span id="rolesSpan"></span></div>
