--- a/src/main/resources/templates/main.css
+++ b/src/main/resources/templates/main.css
@@ -1,4 +1,3 @@
-
 #usernameSpan {
     color: cornflowerblue;
     font-size: 20px;
@@ -19,6 +18,7 @@ a {
     width: 400px;
     height: 600px;
     margin: 0 auto;
+    text-align: center;
 }
 
 #signinSuccessDiv {
@@ -49,6 +49,19 @@ a {
 #logoutAlertDiv {
     padding: 10px;
     background-color: lightyellow;
-    width: 200px;
     text-align: center;
+}
+
+#signinMainDiv {
+    border: aliceblue 1px solid;
+    background-color: aliceblue;
+    text-align: center;
+}
+
+#signinP {
+    text-align: center;
+}
+
+#myUL {
+    text-align: initial;
 }
