Added Bootstrap and Jquery

--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -16,7 +16,7 @@
 
 <div class="wrapper">
 
-    <p>You are Not Authorized to see this page</p>
+    <p id="accessDeniedP">You are Not Authorized to see this page 🍪</p>
 
     <p><a href="/">Turn Back to HomePage</a></p>
 
