--- a/src/main/resources/templates/secret.html
+++ b/src/main/resources/templates/secret.html
@@ -49,7 +49,7 @@
                     } else {
                         let temp = 0;
                         for (let i = 0; i < user.roleSet.length; i++) {
-                            if (user.roleSet[i].role == "ADMIN") {
+                            if (user.roleSet[i].role === "ADMIN") {
                                 list += "(ADMIN)";
                                 temp = 1;
                             }
@@ -68,8 +68,6 @@
     }
 
     function deleteUser(username) {
-        // console.log(username);
-
         let deleteUserRequest = new XMLHttpRequest();
         deleteUserRequest.onreadystatechange = () => {
             if (deleteUserRequest.readyState === 4 && deleteUserRequest.status === 200){
@@ -78,7 +76,7 @@
                     console.log("User Deleted");
                     getAllUsers();
                 } else {
-                    console.log("Silinemedi");
+                    console.log("Not Deleted");
                 }
 
             }
