Added More Security while deleting and getting Users

--- a/src/main/resources/templates/fragments/myCSS.html
+++ b/src/main/resources/templates/fragments/myCSS.html
@@ -81,6 +81,10 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.js"
                 crossorigin="anonymous" th:src="@{/webjars/bootstrap/4.0.0/js/bootstrap.min.js}"></script>
 
+        <link rel="stylesheet"
+              href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+        crossorigin="anonymous" th:href="@{/webjars/font-awesome/5.10.1/css/fontawesome.css}">
+
     </div>
 
 </head>
