--- a/src/main/resources/templates/secret.html
+++ b/src/main/resources/templates/secret.html
@@ -28,6 +28,8 @@
 
     </div>
 
+<!--    <i class="fas fa-camera"></i>-->
+
 <script>
     getAllUsers();
 
@@ -42,20 +44,20 @@
                 let deleteUser = "deleteUser";
                 users.forEach(function (user) { console.log(user.roleSet);
                     let deletingUsername = user.username;
-                    list += "<li>"+user.username+"</li>";
+                    list += "<li>"+user.username;
 
                     if (user.roleSet[0] == null) {
-                        list += "<button onclick=deleteUser('" + deletingUsername + "')>x</button>";
+                        list += "<button onclick=deleteUser('" + deletingUsername + "')>x</button>"+"</li>";
                     } else {
                         let temp = 0;
                         for (let i = 0; i < user.roleSet.length; i++) {
                             if (user.roleSet[i].role === "ADMIN") {
-                                list += "(ADMIN)";
+                                list += "(ADMIN)"+"</li>";
                                 temp = 1;
                             }
                         }
                         if (temp === 0) {
-                            list += "<button onclick=deleteUser('" + deletingUsername + "')>x</button>";
+                            list += "<button class='badge badge-pill badge-warning ml-5' onclick=deleteUser('" + deletingUsername + "')>x</button>"+"</li>";
                         }
                     }
                 })
@@ -71,7 +73,7 @@
         let deleteUserRequest = new XMLHttpRequest();
         deleteUserRequest.onreadystatechange = () => {
             if (deleteUserRequest.readyState === 4 && deleteUserRequest.status === 200){
-
+                // console.log(deleteUserRequest);
                 if(deleteUserRequest.response==="OK") {
                     console.log("User Deleted");
                     getAllUsers();
@@ -84,7 +86,7 @@
         deleteUserRequest.open("POST","http://localhost:8080/deleteUser", true);
         deleteUserRequest.setRequestHeader("Content-Type", "application/json");
         deleteUserRequest.send(username);
-
+        console.log(deleteUserRequest.request);
     }
 
 </script>
