Changed Deleting Users Method to 'DELETE' and url to '/users'

--- a/src/main/resources/templates/secret.html
+++ b/src/main/resources/templates/secret.html
@@ -42,7 +42,7 @@
                 let list = "";
                 let users = JSON.parse(getUsersRequest.response);
                 let deleteUser = "deleteUser";
-                users.forEach(function (user) { console.log(user.roleSet);
+                users.forEach(function (user) {
                     let deletingUsername = user.username;
                     list += "<li>"+user.username;
 
@@ -75,18 +75,18 @@
             if (deleteUserRequest.readyState === 4 && deleteUserRequest.status === 200){
                 // console.log(deleteUserRequest);
                 if(deleteUserRequest.response==="OK") {
-                    console.log("User Deleted");
+                    // console.log("User Deleted");
                     getAllUsers();
                 } else {
-                    console.log("Not Deleted");
+                    // console.log("Not Deleted");
                 }
 
             }
         }
-        deleteUserRequest.open("POST","http://localhost:8080/deleteUser", true);
+        deleteUserRequest.open("DELETE","http://localhost:8080/users", true);
         deleteUserRequest.setRequestHeader("Content-Type", "application/json");
         deleteUserRequest.send(username);
-        console.log(deleteUserRequest.request);
+        // console.log(deleteUserRequest.request);
     }
 
 </script>
